fix: Adjust styles on Association
Incorrect margin on its Heading, and misaligned images.

--- a/components/Associations/Association.module.css
+++ b/components/Associations/Association.module.css
@@ -44,7 +44,7 @@
   object-fit: contain;
   object-position: right top;
   max-width: 12rem;
-  height: 4rem;
+  max-height: 4rem;
 }
 
 .position {
